Table users {
  id serial [pk, increment]
}

Table teams {
  id serial [pk, increment]
}

Table projects {
  id serial [pk, increment]
}

Table artifact_categories {
  id serial [pk, increment]
  slug varchar(50) [unique] 
  name varchar(100) 
  description text
  icon varchar(50) 
}

Table artifacts {
  id serial [pk, increment]
  root_artifact_id integer [ref: > artifacts.id] // tracks the original artifact across all versions
  parent_version_id integer [ref: > artifacts.id] // tracks the immediate parent version for lineage
  
  title varchar(255) [not null]
  description text
  category_id integer [ref: > artifact_categories.id]
  
  author_id integer [ref: > users.id]
  file_size bigint 
  file_path varchar(500) 
  
  date_created timestamp [default: `now()`]
  last_updated timestamp [default: `now()`]
  
  downloads integer [default: 0]
  views integer [default: 0]
  
  license varchar(50)
  
  version_number varchar(50) [not null]
  version_type varchar(20) // 'original', 'fork', 'update', 'collaborative'
  
  is_current boolean [default: false]
  
  status varchar(20) // 'draft', 'published', 'archived'
}

Table artifacts_to_projects {
  artifact_id integer [ref: > artifacts.id]
  project_id integer [ref: > projects.id]
  added_at timestamp [default: `now()`]
}

Table artifacts_to_teams {
  artifact_id integer [ref: > artifacts.id]
  team_id integer [ref: > teams.id]
  added_at timestamp [default: `now()`]
}

Table artifact_tags {
  id serial [pk, increment]
  name varchar(50) [unique]
  description text
}

Table artifacts_to_artifact_tags {
  artifact_id integer [ref: > artifacts.id]
  artifact_tag_id integer [ref: > artifact_tags.id]
  added_at timestamp [default: `now()`]
}
